# asguardian

./: .gitignore  ADDITIONAL_SCAN_HANDOVER.md  ASGARD_UPLIFT_GOAL.md  ASGARD_UPLIFT_PROMPT.md  CHANGELOG.md  NEW_CHECKS.md  README.md  UPLIFT_STATUS.md  architecture.yml  heimdall_report_00a0ff4f.html  heimdall_report_07d08892.html  heimdall_report_0a418ded.html  heimdall_report_100e763d.html  heimdall_report_10ebda72.html  heimdall_report_182d89ac.html  heimdall_report_19ea82e5.html  heimdall_report_1c494ec0.html  heimdall_report_1e701cdf.html  heimdall_report_243ebc67.html  heimdall_report_24597577.html  heimdall_report_2639be5d.html  heimdall_report_267ba4b1.html  heimdall_report_27094159.html  heimdall_report_32485da9.html  heimdall_report_344cfe05.html  heimdall_report_379a5601.html  heimdall_report_3d7a051b.html  heimdall_report_3f6aeb06.html  heimdall_report_43cf5847.html  heimdall_report_4a962b13.html  heimdall_report_510ebe24.html  heimdall_report_5d50566d.html  heimdall_report_60386942.html  heimdall_report_6204a8b9.html  heimdall_report_69fe5e6e.html  heimdall_report_78f5e9ee.html  heimdall_report_7b39a947.html  heimdall_report_7fad1dfa.html  heimdall_report_7fec8023.html  heimdall_report_8ae8c0d4.html  (+27 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
Asgard/: _cli_handlers.py  _cli_help.py  cli.py  heimdall_report_002f4ef3.html  heimdall_report_10fe991c.html  heimdall_report_1e9e2998.html  heimdall_report_1ff6b3b0.html  heimdall_report_251786f6.html  heimdall_report_3236e741.html  heimdall_report_35f360f2.html  heimdall_report_374acc19.html  heimdall_report_3c1d4d5e.html  heimdall_report_49f1dc16.html  heimdall_report_51173d58.html  heimdall_report_642b3e4b.html  heimdall_report_6a98e1ea.html  heimdall_report_70684e66.html  heimdall_report_76d3ca1d.html  heimdall_report_77a505d7.html  heimdall_report_79c15a3d.html  heimdall_report_7f5cc635.html  heimdall_report_8cc7e4b2.html  heimdall_report_8f33363c.html  heimdall_report_951ef21a.html  heimdall_report_9c340b95.html  heimdall_report_b41a6657.html  heimdall_report_b4380bee.html  heimdall_report_b5c5f3bb.html  heimdall_report_b977c74c.html  heimdall_report_b9fa52d0.html  heimdall_report_ba470e07.html  heimdall_report_bb7bcf9b.html  heimdall_report_bb8ef614.html  heimdall_report_de7d7598.html  heimdall_report_e3f361c9.html  heimdall_report_eab467e6.html  heimdall_report_ff9fbacb.html
Asgard/BackendInit/: _templates_base.py  templates.py
Asgard/Baseline/: _baseline_helpers.py  _baseline_operations.py  _baseline_report.py  baseline_manager.py  models.py
Asgard/Dashboard/: server.py
Asgard/Forseti/: __main__.py  cli.py
Asgard/Freya/: README.md  __init__.py  cli.py
Asgard/Heimdall/: __init__.py
Asgard/HooksSetup/: service.py
Asgard/MCP/: __init__.py
Asgard/Reporting/: _github_format_helpers.py  _html_templates.py  github_formatter.py  html_generator.py
Asgard/Volundr/: cli.py
Asgard/common/: _baseline_models.py  _format_methods.py  _formatter_types.py  _hash_cache.py  _incremental_models.py  _parallel_types.py  _progress_types.py  baseline.py  incremental.py  output_formatter.py  parallel.py  progress.py
Asgard/config/: defaults.py  defaults_quality.py  defaults_security.py  loader.py  models.py  models_base.py  models_quality.py  models_security.py
Asgard_Test/L2_CrossPackage/: conftest.py  test_asguardian_passthrough.py  test_forseti_verdandi_integration.py  test_freya_volundr_integration.py  test_full_pipeline_integration.py  test_heimdall_forseti_integration.py  test_heimdall_volundr_integration.py
Asgard_Test/fixtures/: README.md
Asgard_Test/test_utils/: __init__.py  assertion_utils.py  validate_package.py
Asgard_Test/tests_Dashboard/: test_data_collector.py  test_html_renderer.py
Asgard_Test/tests_Forseti/: conftest.py
Asgard_Test/tests_Heimdall/: conftest.py  test_taint_cst_alias_summaries_adversarial.py  (+1 more)
(+2604 files in other folders)
